--- a/web/html_components/admin/login.html
+++ b/web/html_components/admin/login.html
@@ -1,7 +1,6 @@
-<div class="container margin-top-bottom-50px">
+<div class="margin-top-bottom-50px">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
-            
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                   <div class="login-pagelet">
                     <div class="login-block">
                         <h1>Login</h1>
