--- a/web/html_components/admin/products.html
+++ b/web/html_components/admin/products.html
@@ -1,7 +1,70 @@
-Product List
+<div class="row form-group">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2 class="heading">Product List</h2>
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group" *ngFor="let product of productList">
+         <div class="my-ads-product-layout">
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2 class="product-title"><a>{{product.title}}</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                    <img class="img-responsive" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}">
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <div class="price-title">Price</div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <div class="price-amount">£{{product.basePrice}}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!--            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="hr"></div>
+                </div>
+            </div>-->
+<!--            <div class="row form-group option-links">
+                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i><a><div class="option"> Edit</div></a>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-offset-3 col-md-5 col-lg-offset-4 col-lg-4">
+                    <i class="fa fa-times" aria-hidden="true"></i><a><div class="option"> Delete</div></a>
+                </div>
+            </div>-->
+        </div>
+    </div>
+</div>
+<!--<div class="row form-group">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="text-center">
+            <ul class="pagination pagination-md">
+                <li class="first disabled"><span>« First</span></li>
+                <li class="prev disabled"><span>&lt;</span></li>
+                <li class="active"><a href="" rel="nofollow" data-page="0">1</a></li>
+                <li><a href="" rel="nofollow" data-page="1">2</a></li>
+                <li><a href="" rel="nofollow" data-page="2">3</a></li>
+                <li><a href="" rel="nofollow" data-page="3">4</a></li>
+                <li><a href="" rel="nofollow" data-page="4">5</a></li>
+                <li class="next"><a href="" rel="nofollow" data-page="1">&gt;</a></li>
+                <li class="last"><a href="" rel="nofollow" data-page="60">Last »</a></li>
+            </ul> 
+        </div>
+    </div>
+</div>-->
+
+
+<!--Product List
 
 <ul>
     <li *ngFor="let product of productList">
         id: {{product.id}} , title: {{product.title}}, price : {{product.basePrice}}, img : {{product.img}}
 </li>
-</ul>
+</ul>-->
