admin login template and login update

--- a/web/html_components/admin/locations.html
+++ b/web/html_components/admin/locations.html
@@ -8,7 +8,7 @@
         <table class="admin-common-table">
             <thead>
                 <tr>
-                    <th>Location Id</th>
+                    <!--<th>Location Id</th>-->
                     <th>Location Type</th>
                     <th>Location</th>
                     <th>Post Code</th>
@@ -18,7 +18,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let location of locationList">
-                    <td data-label="Location Id">{{location.locationId}}</td>
+                    <!--<td data-label="Location Id">{{location.locationId}}</td>-->
                     <td data-label="Location Type">{{location.locationType}}</td>
                     <td data-label="Location">{{location.searchString}}</td>
                     <td data-label="Post Code">{{location.postCode}}</td>
