--- a/web/html_components/public/login.html
+++ b/web/html_components/public/login.html
@@ -45,7 +45,7 @@
 
 
         <div class="row">
-            <div class="col-sm-4">
+<!--            <div class="col-sm-4">
                 <button class="btn btn-success" data-toggle="modal" data-target="#successModal">Success Modal</button>
             </div>
             <div class="col-sm-4">
@@ -53,7 +53,7 @@
             </div>
             <div class="col-sm-4">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#commonModal">Common Modal</button>
-            </div>
+            </div>-->
 
             <!-- Success Modal -->
             <div id="successModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
