landing page product time

--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -82,6 +82,7 @@
                 <div class="product-auction-img">
                     <a (click)="selectProduct($event, productInfo.id)"><img class="img-responsive" src="resources/images/product/{{productInfo.img}}"></a>
                 </div>
+                <div class="auction-time text-center">3hours 15mins 46secs</div>
                 <div class="product-auction-title margin-bottom-5px">
                     <a (click)="selectProduct($event, productInfo.id)"><h3>{{productInfo.title}}</h3></a>
                 </div>
