--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -139,20 +139,20 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <div class="row">
+<!--                                            <div class="row">
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-availability-content">Available</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-availability-content">Now</h3>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                             <div class="row">
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-availability-content">Minimum term</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-availability-content">None</h3>
+                                                    <h3 class="product-info-details-right-panel-product-availability-content">{{productInfo?.minStay?.title}}</h3>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -160,12 +160,12 @@
                                                     <h3 class="product-info-details-right-panel-product-availability-content">Maximum term</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-availability-content">None</h3>
+                                                    <h3 class="product-info-details-right-panel-product-availability-content">{{productInfo?.maxStay?.title}}</h3>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+<!--                                    <div class="row form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <div class="hr"></div>
                                         </div>
@@ -186,7 +186,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>-->
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <div class="hr"></div>
@@ -198,16 +198,16 @@
                                         </div>
                                     </div>
                                     <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" *ngFor="let amenity of amenityList">
                                             <div class="row">
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-amenities-content">Furnishings</h3>
+                                                    <h3 class="product-info-details-right-panel-product-amenities-content">{{amenity.title}}</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-amenities-content">Furnished</h3>
+                                                    <h3 class="product-info-details-right-panel-product-amenities-content">{{amenity.status}}</h3>
                                                 </div>
                                             </div>
-                                            <div class="row">
+<!--                                            <div class="row">
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-amenities-content">Parking</h3>
                                                 </div>
@@ -246,7 +246,7 @@
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-amenities-content">No</h3>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                     <div class="row form-group">
@@ -266,7 +266,7 @@
                                                     <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Smoking OK?</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Yes</h3>
+                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">{{productInfo?.smoking?.title}}</h3>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -274,7 +274,7 @@
                                                     <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Pets OK?</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">No</h3>
+                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">{{productInfo?.pet?.title}}</h3>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -282,10 +282,10 @@
                                                     <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Occupation</h3>
                                                 </div>
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
-                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Don't mind</h3>
+                                                    <h3 class="product-info-details-right-panel-product-tenant-preferences-content">{{productInfo?.occupation?.title}}</h3>
                                                 </div>
                                             </div>
-                                            <div class="row">
+<!--                                            <div class="row">
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-tenant-preferences-content">DSS</h3>
                                                 </div>
@@ -300,7 +300,7 @@
                                                 <div class="col-xs-5 col-sm-5 col-md-3 col-lg-3">
                                                     <h3 class="product-info-details-right-panel-product-tenant-preferences-content">Yes</h3>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
