--- a/web/html_components/member/profile/editprofile.html
+++ b/web/html_components/member/profile/editprofile.html
@@ -80,6 +80,20 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                            <h5 class="create-ad-label">Roles</h5>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                            <div id="{{role.id}}" *ngFor="let role of roles">
+                                 <p> <input type="checkbox" name="userRoles" value="{{role.name}}"  [checked]="false"/> {{role.name}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-offset-8 col-sm-4  col-md-offset-8 col-md-4  col-lg-offset-8 col-lg-4">
                     <button type="submit" id="user-profile-edit-button" class="form-control common-custom-button">Submit</button>
@@ -88,7 +102,6 @@
         </form>
     </div>
 </div>
-
 <!--    This is your profile
 
     <br/>Profile Info<br/>
