--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -51,6 +51,14 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                            <h4>Role:</h4>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                            <p>Landlord, Tenant</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                             <h4>Profile Verification</h4>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
