--- a/web/html_components/public/login.html
+++ b/web/html_components/public/login.html
@@ -1,3 +1,21 @@
+<button type="button" class="btn btn-primary" (click)="showChildModal()">Open child modal</button>
+<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+     <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Child modal</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="hideChildModal()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                I am a child modal, opened from parent component!
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="container margin-top-bottom-50px">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
