--- a/web/html_components/member/profile/editprofile.html
+++ b/web/html_components/member/profile/editprofile.html
@@ -88,7 +88,14 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div id="{{role.id}}" *ngFor="let role of roles">
-                                 <p> <input type="checkbox" name="userRoles" value="{{role.name}}"  [checked]="false"/> {{role.name}}</p>
+                                <p> 
+                                    <input type="checkbox" 
+                                       name="userRoles" 
+                                       value="{{role.description}}"  
+                                       [checked]="setCurrentRoles(role?.id)" 
+                                       (change)="updateCheckedRole(role, $event)"
+                                     /> {{role.description}}
+                                </p>
                             </div>
                         </div>
                     </div>
