--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -54,7 +54,7 @@
                             <h4>Role:</h4>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            <p>Landlord, Tenant</p>
+                            <p>{{rolesString}}</p>
                         </div>
                     </div>
                     <div class="row">
