--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" >
                             <input class="form-control input-custom-field" type="text" 
-                                   [ngModel]="fromDate | date:'dd-MM-yyyy'" (ngModelChange)="fromDate = $event;"
+                                   [ngModel]="fromDate | date:'yyyy-MM-dd'" (ngModelChange)="fromDate = $event;"
                                    (focus)="showDatePicker = true" >
 
                                    <div class="start-date" *ngIf="showDatePicker" >
@@ -56,13 +56,22 @@
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                             <h5 class="featured-ad-label">To</h5>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                            <input class="form-control input-custom-field" type="text" id="datepicker">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" >
+                            <input class="form-control input-custom-field" type="text" 
+                                   [ngModel]="toDate | date:'yyyy-MM-dd'" (ngModelChange)="toDate = $event;"
+                                   (focus)="showToDatepicker = true" >
+
+                                   <div class="start-date" *ngIf="showToDatepicker" >
+                                <datepicker [(ngModel)]="toDate" [minDate]="minDate" [showWeeks]="false" (selectionDone) ="showToDatepicker = false"  ></datepicker>
+                            </div>
                         </div>
+<!--                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <input class="form-control input-custom-field" type="text" id="datepicker">
+                        </div>-->
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-offset-6 col-md-6 col-lg-6">
-                            <button id="view-stats-button" class="form-control common-custom-button">View Stats</button>
+                            <button (click)="searchStatList($event)" id="view-stats-button" class="form-control common-custom-button">View Stats</button>
                         </div>
                     </div>
 
@@ -79,13 +88,13 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <!--                                    <tr *ngFor="let stat of statList">
-                                                                            <td data-label="Date">{{stat.date}}</td>
-                                                                            <td data-label="Clicks">{{stat.clicks}}</td>
-                                                                            <td data-label="Impressions">{{stat.impressions}}</td>
-                                                                            <td data-label="CTR">{{stat.ctr}}</td>
-                                                                            <td data-label="Cost">{{stat.cost.amount}}{{stat.cost.currencyUnit.title}}</td>
-                                                                        </tr>-->
+                                    <tr *ngFor="let stat of statList">
+                                        <td data-label="Date">{{stat.date}}</td>
+                                        <td data-label="Clicks">{{stat.clicks}}</td>
+                                        <td data-label="Impressions">{{stat.impressions}}</td>
+                                        <td data-label="CTR">{{stat.ctr}}</td>
+                                        <td data-label="Cost">£{{stat.cost}}</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
