--- a/web/html_components/public/login.html
+++ b/web/html_components/public/login.html
@@ -1,5 +1,5 @@
-<button type="button" class="btn btn-primary" (click)="showChildModal()">Open child modal</button>
-<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+<!--<button type="button" class="btn btn-primary" (click)="showChildModal()">Open child modal</button>-->
+<!--<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
      <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 
 <div class="container margin-top-bottom-50px">
