Image resize, navigation highligh, search param dyanmic

--- a/web/html_components/member/message/inbox.html
+++ b/web/html_components/member/message/inbox.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/inbox']">Inbox</a></li>
+            <li><a class="active" [routerLink]="['/inbox']">Inbox</a></li>
             <li><a [routerLink]="['/sent']">Sent</a></li>
             <!--<li><a [routerLink]="['/saved']">Saved</a></li>-->
         </ul>
