--- a/web/html_components/member/profile/uploaddocument.html
+++ b/web/html_components/member/profile/uploaddocument.html
@@ -1,10 +1,10 @@
 <div class="row margin-top-align">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="profile-left-sidebar-ul">
-            <li><a class="active" (click)="myprofile($event)">Profile</a></li>
+            <li><a (click)="myprofile($event)">Profile</a></li>
             <li><a (click)="editprofile($event)">Edit Profile</a></li>
             <li><a (click)="uploadimg($event)">Upload Profile Picture</a></li>
-            <li><a (click)="uploaddocument($event)">Profile Verification</a></li>
+            <li><a class="active" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
