--- a/web/html_components/member/savedads.html
+++ b/web/html_components/member/savedads.html
@@ -2,8 +2,8 @@
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a (click)="myproduct($event, 0)">Create Ads</a></li>
-            <li><a class="active" [routerLink]="['/myads']">My Ads</a></li>
-            <li><a [routerLink]="['/savedads']">Saved Ads</a></li>
+            <li><a [routerLink]="['/myads']">My Ads</a></li>
+            <li><a class="active" [routerLink]="['/savedads']">Saved Ads</a></li>
             <li><ul class="nav nav-pills nav-stacked" id="stacked-menu">
                     <li>
                         <a class="nav-container" data-toggle="collapse" data-parent="#stacked-menu" href="#p1">Featured Ads <span class="caret"></span></a>          
