--- a/web/html_components/member/account/notifications.html
+++ b/web/html_components/member/account/notifications.html
@@ -1,7 +1,7 @@
 <div class="row">
      <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/notifications']" (click)="notifications($event)">Notifications</a></li>
+            <li><a class="active" [routerLink]="['/notifications']" (click)="notifications($event)">Notifications</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
