--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -2,14 +2,14 @@
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="featured-ad-left-sidebar-ul">
             <li><a (click)="myproduct($event, 0)">Create Ads</a></li>
-            <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
+            <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
             <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
             <li><ul class="nav nav-pills nav-stacked" id="stacked-menu">
                     <li>
                         <a class="nav-container" data-toggle="collapse" data-parent="#stacked-menu" href="#p1">Featured Ads <span class="caret"></span></a>          
-                        <ul class="nav nav-pills nav-stacked collapse" id="p1">
+                        <ul class="nav nav-pills nav-stacked collapse in" id="p1" aria-expanded="true">
                             <li><a [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
-                            <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
+                            <li><a class="active" [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
                             <li><a [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
                             <li><a [routerLink]="['/ranking']" (click)="ranking($event)">Ranking</a></li>
                             <li><a (click)="fafaq($event)">FAQ</a></li>
