--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -2,15 +2,15 @@
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="featured-ad-left-sidebar-ul">
             <li><a (click)="myproduct($event, 0)">Create Ads</a></li>
-            <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
+            <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
             <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
             <li><ul class="nav nav-pills nav-stacked" id="stacked-menu">
                     <li>
                         <a class="nav-container" data-toggle="collapse" data-parent="#stacked-menu" href="#p1">Featured Ads <span class="caret"></span></a>          
-                        <ul class="nav nav-pills nav-stacked collapse" id="p1">
+                        <ul class="nav nav-pills nav-stacked collapse in" id="p1" aria-expanded="true">
                             <li><a [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
                             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
-                            <li><a [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
+                            <li><a class="active" [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
                             <li><a [routerLink]="['/ranking']" (click)="ranking($event)">Ranking</a></li>
                             <li><a (click)="fafaq($event)">FAQ</a></li>
                         </ul>
@@ -59,10 +59,10 @@
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" >
                             <input class="form-control input-custom-field" type="text" 
                                    [ngModel]="toDate | date:'yyyy-MM-dd'" (ngModelChange)="toDate = $event;"
-                                   (focus)="showToDatepicker = true" >
+                                   (focus)="showToDatePicker = true" >
 
-                                   <div class="start-date" *ngIf="showToDatepicker" >
-                                <datepicker [(ngModel)]="toDate" [minDate]="minDate" [showWeeks]="false" (selectionDone) ="showToDatepicker = false"  ></datepicker>
+                                   <div class="start-date" *ngIf="showToDatePicker" >
+                                <datepicker [(ngModel)]="toDate" [minDate]="minDate" [showWeeks]="false" (selectionDone) ="showToDatePicker = false"  ></datepicker>
                             </div>
                         </div>
 <!--                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
