--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -118,6 +118,19 @@
                                     <div class="tab-pane" id="step3">
                                         <div class="row form-group">
                                             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                                <h5 class="create-ad-label">Available From</h5>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                                <input name="availableFrom" class="form-control input-custom-field" type="text" 
+                                                    [ngModel]="availableFrom | date:'yyyy-MM-dd'" (ngModelChange)="availableFrom = $event;"
+                                                    (focus)="showDatePicker = true" >
+                                                <div class="start-date" *ngIf="showDatePicker" >
+                                                    <datepicker name="availableFromDatePicker" [(ngModel)]="availableFrom" [minDate]="minDate" [showWeeks]="false" (selectionDone) ="showDatePicker = false"  ></datepicker>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                                                 <h5 class="create-ad-label">Min Stay</h5>
                                             </div>
                                             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
@@ -136,7 +149,22 @@
                                                 </select>
                                             </div>
                                         </div>
-                                       <div class="row form-group">
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                                <h5 class="create-ad-label">Availabilities</h5>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                                <div id="{{availability.id}}" *ngFor="let availability of availabilityList">
+                                                     <p><input type="checkbox"
+                                                          name="productAvailabilitiyList"
+                                                          value="{{availability.title}}"
+                                                          [checked]="setCurrentAvailabilities(availability?.id)"
+                                                          (change)="updateCheckedAvailabilities(availability, $event)"
+                                                          /> {{availability.title}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
                                             <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
                                                 <a href="#step2" role="tab" data-toggle="tab"><button type="button" id="step3-previous" name="step3-previous" class="form-control common-custom-button">Previous Step</button></a>
                                             </div>
