--- a/web/html_components/member/message/sent.html
+++ b/web/html_components/member/message/sent.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a [routerLink]="['/inbox']">Inbox</a></li>
-            <li><a [routerLink]="['/sent']">Sent</a></li>
+            <li><a class="active" [routerLink]="['/sent']">Sent</a></li>
             <!--<li><a [routerLink]="['/saved']">Saved</a></li>-->
         </ul>
     </div>
