--- a/web/html_components/public/basicsearch.html
+++ b/web/html_components/public/basicsearch.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/basicsearch']" (click)="basicsearch($event)">Basic Search</a></li>
+            <li><a class="active" [routerLink]="['/basicsearch']" (click)="basicsearch($event)">Basic Search</a></li>
             <li><a [routerLink]="['/advancedsearch']" (click)="advancedsearch($event)">Advanced Search</a></li>
         </ul>
     </div>
@@ -12,6 +12,19 @@
             </div>
         </div>
         <form role="form" (submit)="search($event)"> 
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                    <h3 class="basic-search-selection-title">Search Location</h3>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+                    <div class="basic-search-page-search-box-layout">
+                        <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
+                            [typeahead]="locationList"
+                            typeaheadOptionField="searchString"
+                            class="form-control search-input-field" placeholder="Search for Location">
+                    </div>
+                </div>            
+            </div>
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
                     <h3 class="basic-search-selection-title">Property Type</h3>
@@ -27,20 +40,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
                     <input id="advertRef" class="form-control input-custom-field" placeholder="Enter Your Advert Ref#"> 
                 </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
-                    <h3 class="basic-search-selection-title">Search Location</h3>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
-                    <div class="basic-search-page-search-box-layout">
-                        <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
-                            [typeahead]="locationList"
-                            typeaheadOptionField="searchString"
-                            class="form-control search-input-field" placeholder="Search for Location">
-                    </div>
-                </div>            
-            </div>        
+            </div>                    
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-10 col-md-2 col-lg-offset-10 col-lg-2  form-group">
                     <button type="submit" id="basicSearchButton" class="form-control common-custom-button">Search</button>
