--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -23,22 +23,22 @@
                 </div>
             </form>
             <ul class="nav navbar-nav">
-                <li class="dropdown">
+<!--                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Radius <span class="caret"></span></a>
                     <ul class="dropdown-menu product-info-detail-custom-dropdown-menu">
                         <li *ngFor="let radius of radiusList" ><a href="" id="{{radius.id}}">{{radius.title}}</a></li>
                     </ul>
-                </li>
+                </li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Min Price <span class="caret"></span></a>
                     <ul class="dropdown-menu product-info-detail-custom-dropdown-menu">
-                        <li *ngFor="let minPrice of minPriceList" ><a href="" id="{{minPrice.id}}">{{minPrice.currencyUnit.title}}{{minPrice.amount}}</a></li>
+                        <li *ngFor="let minPrice of minPriceList" ><a href="" id="{{minPrice.id}}">£{{minPrice.amount}}</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Max Price <span class="caret"></span></a>
                     <ul class="dropdown-menu product-info-detail-custom-dropdown-menu">
-                        <li *ngFor="let maxPrice of maxPriceList" ><a href="" id="{{maxPrice.id}}">{{maxPrice.currencyUnit.title}}{{maxPrice.amount}}</a></li>
+                        <li *ngFor="let maxPrice of maxPriceList" ><a href="" id="{{maxPrice.id}}">£{{maxPrice.amount}}</a></li>
                     </ul>
                 </li>
                 <button type="button" class="common-custom-button custom-nav-button" data-toggle="collapse" data-target="#filsters">Filters <span class="caret"></span></button>
@@ -51,29 +51,29 @@
                             </select> 
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
+                            <h3 class="filsters-submenu-title">Property Size</h3>
+                            <select class="form-control select-custom-field">
+                                <option *ngFor="let productSize of productSizeList" value="{{productSize.title}}"><a id="{{productSize.id}}">{{productSize.title}}</a></option>
+                            </select> 
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Occupation</h3>
                             <select class="form-control select-custom-field">
                                 <option *ngFor="let occupation of occupationList" value="{{occupation.title}}"><a id="{{occupation.id}}">{{occupation.title}}</a></option>
                             </select> 
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
-                            <h3 class="filsters-submenu-title">Gender</h3>
+                            <h3 class="filsters-submenu-title">Pet</h3>
                             <select class="form-control select-custom-field">
-                                <option *ngFor="let gender of genderList" value="{{gender.title}}"><a id="{{gender.id}}">{{gender.title}}</a></option>
+                                <option *ngFor="let pet of petList" value="{{pet.title}}"><a id="{{pet.id}}">{{pet.title}}</a></option>
                             </select> 
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
-                            <h3 class="filsters-submenu-title">Room Size</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let roomSize of roomSizeList" value="{{roomSize.title}}"><a id="{{roomSize.id}}">{{roomSize.title}}</a></option>
-                            </select> 
-                        </div>
+                        </div>                        
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Duration</h3>
                             <select class="form-control select-custom-field">
-                                <option *ngFor="let duration of durationList" value="{{duration.title}}"><a id="{{duration.id}}">{{duration.title}}</a></option>
+                                <option *ngFor="let availability of availabilityList" value="{{availability.title}}"><a id="{{availability.id}}">{{availability.title}}</a></option>
                             </select> 
                         </div>
                     </div>
