--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -77,12 +77,12 @@
                         <h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3 class="product-info-details-left-panel-location">{{product?.location?.searchString}} {{product?.location?.postCode}}</h3>
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <button class="product-info-details-request-button">Request More Details</button> or
                     </div>
@@ -92,7 +92,7 @@
                         <h3 class="product-info-details-contact-number">Call: 01653 511024</h3>
                     </div>
                 </div>
-                 <div class="row form-group">
+                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3 class="product-info-details-left-panel-save-property" ><i class="save-property-heart-icon fa fa-heart-o" aria-hidden="true"></i><a class="product-info-details-left-panel-save-property">Save Property</a></h3>
                     </div>
