--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body text-center modal-body-text">
-                Account Settings of Featured Ad is updated Successfully
+                Account Settings for Featured Ad is updated Successfully
             </div>
             <div class="modal-footer modal-footer-bg"></div>
         </div>
@@ -39,7 +39,7 @@
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                <h2 class="featured-ad-heading">Account Settings of Featured Ad</h2>
+                <h2 class="featured-ad-heading">Account Settings for Featured Ad</h2>
             </div>
         </div>
         <div class="row form-group">
